Fix: Dragging local file onto tab gives error message and fails (bug 243376) sr=pinkerton